session-manager/cluster-resources/session-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-manager-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: session-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: session-manager
    spec:
      serviceAccountName: session-manager-sa
      containers:
        - name: session-manager
          image: simaosantos1230212/session-manager:latest
          volumeMounts:
            - name: kubeconfig-volume
              mountPath: /root/conf/kubeconfig.yaml
              subPath: kubeconfig.yaml
              readOnly: true
            - name: templates-volume
              mountPath: /root/conf/templates.yaml
              subPath: templates.yaml
              readOnly: true
      volumes:
        - name: kubeconfig-volume
          secret:
            secretName: kubeconfig-secret
        - name: templates-volume
          configMap:
            name: templates-config
---
apiVersion: v1
kind: Service
metadata:
  name: session-manager-svc
spec:
  selector:
    app.kubernetes.io/name: session-manager
  ports:
    - protocol: TCP
      port: 8080
