session-manager/cluster-resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - localhost
      secretName: tls
  rules:
    - http:
        paths:
          - path: /session-manager(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: "session-manager-svc"
                port:
                  number: 8080
